Fix scrollbar rendering in Chromium based browsers

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: #ffffff;
 }
 
 ::-webkit-scrollbar-thumb {
